--- a/_includes/default.html
+++ b/_includes/default.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
   {%- include head.html -%}
-  <style>@import url(/public/css/syntax/{{ site.highlighter-theme }}.css);</style>
+  <style>@import url(public/css/syntax/{{ site.highlighter-theme }}.css);</style>
   <title>{{ site.title }}</title>
   <!-- <link href="/public/css/bootstrap.min.css" rel="stylesheet"> -->
 
-  <link href="/public/css/style.css" rel="stylesheet">
+  <link href="public/css/style.css" rel="stylesheet">
   <body>
   	<div class="container"> 
 		<div class="sidebar">
