修改关于的路径

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,6 @@
 <div class="sidebar-item sidebar-header">
 	<div class='sidebar-brand'>
-		<a href="/about/">{{ site.title }}</a>
+		<a href="/move-forward/about/">{{ site.title }}</a>
 	</div>
 	<p class="lead">{{ site.description }}</p>
 	{%- if social.github -%}
@@ -15,7 +15,7 @@
 	<ul class="nav">
       <li class="nav-title">分类</li>
 	  <li>
-	  	<a class="nav-item" href="/">文章</a>
+	  	<a class="nav-item" href="/move-forward">文章</a>
 	  </li>
 	  {% assign pages_list = site.pages %}
 	  {% for node in pages_list %}
